add tests | need to fix
