# docs/swagger.json
@@ -132,9 +132,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "todo deleted successfully",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.RespDelSucc"
                         }
                     }
                 }
@@ -268,6 +268,17 @@
         }
     },
     "definitions": {
+        "models.RespDelSucc": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "todo": {
+                    "$ref": "#/definitions/models.ToDo"
+                }
+            }
+        },
         "models.ToDo": {
             "type": "object",
             "properties": {
