# handlers/delete.go
@@ -14,7 +14,7 @@ import (
 // @Tags Delete
 // @Param title path string true "Заголовок задачи"
 // @Produce application/json
-// @Success 200 {string} string "todo deleted successfully"
+// @Success 200 {object} models.RespDelSucc
 // @Router /del/{title} [delete]
 func Del(c *fiber.Ctx) error { // Delete ToDo by Title
 	needTitle := c.Params("title", "")
@@ -24,12 +24,14 @@ func Del(c *fiber.Ctx) error { // Delete ToDo by Title
 		})
 	}
 	emptyEx := new(models.ToDo)
-	if check := database.DB.Db.Where("title = ?", needTitle).Delete(emptyEx); check.RowsAffected == 0 {
+	if check := database.DB.Db.Where("title = ?", needTitle).First(&emptyEx).Delete(&emptyEx); check.RowsAffected == 0 {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
 			"message": fmt.Sprintf("there is no todo with title = %s", needTitle),
 		})
 	}
-	return c.Status(fiber.StatusOK).JSON(fiber.Map{
-		"message": "todo deleted successfully",
-	})
+	response := models.RespDelSucc{
+		Message: "todo deleted successfully",
+		Todo:    *emptyEx,
+	}
+	return c.Status(fiber.StatusOK).JSON(response)
 }
