# models/modelSwag.go
@@ -1,0 +1,6 @@
+package models
+
+type RespDelSucc struct {
+	Message string
+	Todo    ToDo
+}
